blackbox/__snapshots__/reflect.snapshot.capture.acceptance.test.ts.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`reflect.snapshot capture given: [case1] repo without claude code project when: [t0] capture is attempted then: stderr matches snapshot 1`] = `
"~[FILE]
        throw new Error(\`no claude code project found for \${input.scope.cwd}. expected at [STACK]
              ^

Error: no claude code project found for [TEMP_PATH] expected at [STACK]
    at [STACK]
    at [STACK]
    at [STACK]

Node.js v[VERSION]
"
`;
